--- a/Xunit.ApiTesting/Xunit.ApiTesting.nuspec
+++ b/Xunit.ApiTesting/Xunit.ApiTesting.nuspec
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <package>
   <metadata>
-    <id>xunit.apitesting</id>
+    <id>Xunit.ApiTesting</id>
     <version>$version$</version>
     <authors>Antura</authors>
     <description>
