--- a/Xunit.ApiTesting/packages.config
+++ b/Xunit.ApiTesting/packages.config
@@ -4,6 +4,7 @@
   <package id="RestSharp" version="105.2.3" targetFramework="net45" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
+  <package id="Xunit.ApiTesting" version="1.0.0.3" targetFramework="net45" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
   <package id="xunit.core" version="2.1.0" targetFramework="net45" />
   <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net45" />
